# dingtalk-gpt-openclaw-middleware

./: .env.example  .gitignore  README.md  pyproject.toml
app/: dingtalk_stream_runner.py  main.py
app/api/: routes.py
app/core/: capability_registry.py  config.py  logging.py  protocol.py
app/models/: dingtalk.py  task.py
app/prompts/: router_system_prompt.txt
app/services/: dingtalk_service.py  openai_router.py  openclaw_client.py  orchestrator.py  task_store.py
dingtalk_gpt_openclaw_middleware.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
infra/openclaw-exec-bridge/: app.py
tests/: test_protocol.py
